<resources>
    <string name="app_name">My Application</string>
    <string name="title">Title</string>
    <string name="dateline">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profile">Profile</string>
    <string name="content">Content</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
</resources>